# simple_lpr

./: CMakeLists.txt  NumberPlateRecognizer.h  README.md  main.cpp  mjpeg_streamer.py  ocr_server.py  ocrserver_requirements.txt
samples/: mjpeg_streamer.py
src/: NumberPlateRecognizer.cpp  NumberPlateRecognizer.h  async_ocr_client.cpp  async_ocr_client.h  main.cpp  main_window.cpp  main_window.h
src/backend/: ocr_server.py  requirements.txt  send.sh  video2frames.py
src/backend/ANPR-System/: LICENSE  README.md  inference.py
src/backend/ANPR-System/ocr_crnn/: README.md  ocr_train.ipynb
src/backend/ANPR-System/yolo_finetun/: README.md
src/backend/ANPR-System/yolo_finetun/runs/detect/yolov8n_plate_detector_local2/: args.yaml
